pi-parser/test-data/snapshots/pi_parser__tests__parse_types_prims_u32.snap
---
source: pi-parser/src/tests.rs
expression: "&expr"
---
node:
  PrimitiveType: U32
span:
  range:
    start: 0
    end: 3
  file_id: 0

