pi-parser/test-data/snapshots/pi_parser__tests__parse_types_prims_u8.snap
---
source: pi-parser/src/tests.rs
expression: "&expr"
---
node:
  PrimitiveType: U8
span:
  range:
    start: 0
    end: 2
  file_id: 0

