pi-parser/test-data/snapshots/pi_parser__tests__parse_types_struct.snap
---
source: pi-parser/src/tests.rs
expression: "&expr"
---
node:
  StructType:
    ? node: x
      span:
        range:
          start: 14
          end: 16
        file_id: 0
    : node:
        pub_:
          node: false
          span:
            range:
              start: 10
              end: 10
            file_id: 0
        type_:
          node:
            PrimitiveType: I32
          span:
            range:
              start: 10
              end: 14
            file_id: 0
        val:
          node:
            IntLit:
              negative:
                node: false
                span:
                  range:
                    start: 18
                    end: 19
                  file_id: 0
              signed: true
              bits: 32
              val:
                node: 0
                span:
                  range:
                    start: 18
                    end: 19
                  file_id: 0
          span:
            range:
              start: 18
              end: 19
            file_id: 0
      span:
        range:
          start: 10
          end: 22
        file_id: 0
    ? node: y
      span:
        range:
          start: 30
          end: 31
        file_id: 0
    : node:
        pub_:
          node: true
          span:
            range:
              start: 22
              end: 26
            file_id: 0
        type_:
          node:
            PrimitiveType: U64
          span:
            range:
              start: 26
              end: 30
            file_id: 0
        val: ~
      span:
        range:
          start: 22
          end: 34
        file_id: 0
    ? node: foo
      span:
        range:
          start: 38
          end: 41
        file_id: 0
    : node:
        pub_:
          node: false
          span:
            range:
              start: 34
              end: 34
            file_id: 0
        type_:
          node:
            Ident: Foo
          span:
            range:
              start: 34
              end: 38
            file_id: 0
        val: ~
      span:
        range:
          start: 34
          end: 44
        file_id: 0
    ? node: bar
      span:
        range:
          start: 49
          end: 52
        file_id: 0
    : node:
        pub_:
          node: false
          span:
            range:
              start: 44
              end: 44
            file_id: 0
        type_:
          node:
            PtrType:
              node:
                Ident: Bar
              span:
                range:
                  start: 44
                  end: 48
                file_id: 0
          span:
            range:
              start: 44
              end: 49
            file_id: 0
        val: ~
      span:
        range:
          start: 44
          end: 54
        file_id: 0
span:
  range:
    start: 0
    end: 55
  file_id: 0

